--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Minha primeira aula sobre GIT v1.1</h1>
-    
+    <div align="center">
+        <h2>Novo DIV e Novo H2</h2>
+    </div>
 </body>
 </html>
